@@ -27,24 +27,24 @@ class TestMain {
 
 			// Unterschiedliche Arten FuncTypes zu initialisieren
 			// Liste mit Parametertypen und Reulttypen erstellen
-			ArrayList<WasmValueType> params = new ArrayList<>();
-			params.add(WasmValueType.i32);
-			params.add(WasmValueType.i32);
-			ArrayList<WasmValueType> results = new ArrayList<>();
-			results.add(WasmValueType.i32);
+			ArrayList<ValueType> params = new ArrayList<>();
+			params.add(ValueType.i32);
+			params.add(ValueType.i32);
+			ArrayList<ValueType> results = new ArrayList<>();
+			results.add(ValueType.i32);
 			// Funktionstyp mit Parametern und Results erstellen
 			FuncType funcType = new FuncType(params, results);
 			// Listen mit params und results direkt im Konstruktoraufruf erstellen
 			FuncType funcType2 = new FuncType(
-					new ArrayList<WasmValueType>() {
+					new ArrayList<ValueType>() {
 						{
-							add(WasmValueType.i32);
-							add(WasmValueType.i32);
+							add(ValueType.i32);
+							add(ValueType.i32);
 						}
 					},
-					new ArrayList<WasmValueType>() {
+					new ArrayList<ValueType>() {
 						{
-							add(WasmValueType.i32);
+							add(ValueType.i32);
 						}
 					});
 
@@ -60,22 +60,22 @@ class TestMain {
 
 	}
 
-	static void createTestfile1() throws IOException {
-		BytecodeBuilder bb = new BytecodeBuilder();
+	static void createTestfile1() throws IOException, WasmBuilderException {
+		WasmBuilder wb = new WasmBuilder();
 		FuncType emptyFuncType = new FuncType();
-		Func main = bb.createFunction(emptyFuncType);
+		Func main = wb.createFunction(emptyFuncType);
 		List<Func> funcs = new ArrayList<>();
 		funcs.add(main);
 		// imports testen
 
 		// globals testen
-		List<GlobalType> globals = List.of(new GlobalType(WasmValueType.i32, true), new GlobalType(WasmValueType.i32, true));
-		bb.setGlobals(globals);
-		bb.build(funcs);
+		List<GlobalType> globals = List.of(new GlobalType(ValueType.i32, true, 0), new GlobalType(ValueType.i32, true, 42));
+		wb.setGlobals(globals);
+		wb.build(funcs);
 
 		// zusammengebautes Byte-Array in Datei schreiben
 		FileOutputStream out = new FileOutputStream("./out/testfile1.wasm");
-		out.write(bb.getWasmBuilder().getByteArray());
+		out.write(wb.getByteArray());
 		out.close();
 	}
 
@@ -88,37 +88,37 @@ class TestMain {
 		 * Logisch ergibt der Code keinen Sinn und dient nur zur Überprüfung
 		 * des erstellten Bytecodes
 		 */
-		BytecodeBuilder bbuilder = new BytecodeBuilder();
-
+		WasmBuilder wbuilder = new WasmBuilder();
+	wbuilder.setModuleName("MuckelIstDerBeste");
 		// Funktionstypen mit Parametern und Results erstellen
 		FuncType funcType3 = new FuncType(
-				new ArrayList<WasmValueType>(
-						Arrays.asList(WasmValueType.i32)),
-				new ArrayList<WasmValueType>(), "tolleFunktion");
+				new ArrayList<>(
+                        List.of(ValueType.i32)),
+				new ArrayList<ValueType>(), "tolleFunktion");
 
 		FuncType funcType4 = new FuncType(
-				new ArrayList<WasmValueType>(
-						Arrays.asList(WasmValueType.i32)),
-				new ArrayList<WasmValueType>(), "tolleFunktion2");
+				new ArrayList<>(
+                        List.of(ValueType.i32)),
+				new ArrayList<ValueType>(), "tolleFunktion2");
 
 		FuncType emptyFuncType = new FuncType();
 
 		// Listen mit locals der Funktionen erstellen
-		List<Local> mainLocals = (List.of(new Local(WasmValueType.i32, "Local1")));
-		List<Local> try1Locals = (List.of(new Local(WasmValueType.i32, "Local2"), new Local(WasmValueType.i32, "Local3")));
+		List<Local> mainLocals = (List.of(new Local(ValueType.i32, "Local1")));
+		List<Local> try1Locals = (List.of(new Local(ValueType.i32, "Local2"), new Local(ValueType.i32, "Local3")));
 
 		// Funktionen erstellen und Instructions hinzufügen
-		Func main = bbuilder.createFunction(emptyFuncType, mainLocals);
+		Func main = wbuilder.createFunction(emptyFuncType, mainLocals);
 		main.emitLocalGet(0);
 		main.emitLocalSet(0);
 		main.emitEnd();
 
-		Func try1 = bbuilder.createFunction(funcType3, try1Locals);
+		Func try1 = wbuilder.createFunction(funcType3, try1Locals);
 		try1.emitLocalGet(0);
 		try1.emitLocalSet(1);
 		try1.emitEnd();
 
-		Func try2 = bbuilder.createFunction(funcType3, try1Locals);
+		Func try2 = wbuilder.createFunction(funcType3, try1Locals);
 		try2.emitEnd();
 
 		// ArrayList mit allen Funktionen
@@ -128,11 +128,11 @@ class TestMain {
 		funcs.add(try2);
 
 		// build aufrufen mit der ArrayList von Funktionen
-		bbuilder.build(funcs);
+		wbuilder.build(funcs);
 
 		// zusammengebautes Byte-Array in Datei schreiben
 		FileOutputStream out = new FileOutputStream("./out/testfile1_simple.wasm");
-		out.write(bbuilder.getWasmBuilder().getByteArray());
+		out.write(wbuilder.getByteArray());
 		out.close();
 	}
 }
